--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "private": true,
   "repository": "https://github.com/npolar/npdc-geology",
   "dependencies": {
-    "npdc-common": "npolar/npdc-common#v4.10.16"
+    "npdc-common": "github:npolar/npdc-common#v4.11.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
-    "gulp": "^3.9.0",
-    "should": "^7.1.0",
-    "npdc-gulp": "npolar/npdc-gulp",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
-    "partialify": "^3.1.3"
+    "gulp": "^3.9.0",
+    "npdc-gulp": "github:npolar/npdc-gulp",
+    "partialify": "^3.1.3",
+    "should": "^7.1.0"
   },
   "browserify": {
     "transform": [
